fix button appearance on mobile

--- a/src/styles/sass/admin/chatroom.scss
+++ b/src/styles/sass/admin/chatroom.scss
@@ -19,6 +19,10 @@
     height: fit-content;
     padding: 8px;
 
+    button {
+      padding: 0 4px;
+    }
+
     header {
       width: fit-content;
       margin-bottom: 0px;
@@ -135,6 +139,7 @@
     display: flex;
     justify-content: end;
     align-items: center;
+    padding: 0;
   }
 
   header {
